syntax = "proto2";

package dev.vhonta.news.proto;

import "zio-temporal.proto";

message Reader {
  required zio.temporal.protobuf.UUID id = 1;
  required int64 registeredAt = 2;
}

message ReaderSettings {
  required zio.temporal.protobuf.UUID reader = 1;
  required int64 modifiedAt = 2;
  required string timezone = 3;
}

enum NewsTopicLanguage {
  English = 0;
  French = 1;
  Spanish = 2;
  Ukrainian = 4;
}

message NewsFeedTopic {
  required zio.temporal.protobuf.UUID id = 1;
  required zio.temporal.protobuf.UUID owner = 2;
  required string topic = 3;
  required NewsTopicLanguage lang = 4;
}

message NewsFeedArticle {
  required zio.temporal.protobuf.UUID id = 1;
  required zio.temporal.protobuf.UUID topic = 2;
  required string title = 3;
  optional string description = 4;
  required int64 publishedAt = 5;
}